:bug: Fix spinner behind the Account component while in the center of the page

--- a/client/src/components/home/components/account/account.styles.scss
+++ b/client/src/components/home/components/account/account.styles.scss
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   padding: 2vmin;
-  background: rgba(255, 217, 45, 0.4);
+  background: #FAE9A4;
   border-radius: 2vmin;
   border: 0.3vmin solid rgb(219, 201, 99);
   box-shadow: 0 0 0.5vmin black;
